name:                token-bucket
version:             0.1.0.0
synopsis:            Rate limiter using lazy bucket algorithm
homepage:            https://github.com/hvr
license:             GPL-3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Concurrency
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
description:
  This implementation is heavily inspired by the one described in
  <http://ksdlck.com/post/17418037348/rate-limiting-at-webscale-lazy-leaky-buckets "Rate Limiting at Webscale: Lazy Leaky Buckets">

library
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8, time >=1.4 && <1.5
  hs-source-dirs:      src
  exposed-modules:     Control.Concurrent.TokenBucket
